--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fuad Gurbanov - Data Scientist and AI Engineer</title>
+    <title>Fuad Gurbanov - Data Scientist/AI Engineer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #03032b; /* Очень темно-синий цвет */
+            background-image: url('https://img.freepik.com/free-vector/dark-blue-waves-dots-abstract-background_79603-879.jpg'); 
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             color: #ffffff;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #03032b;
+            background-color: rgba(13, 13, 58, 0.7); 
             padding: 20px;
             text-align: center;
         }
@@ -23,7 +26,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #03032b;
+            background-color: rgba(13, 13, 58, 0.7); 
         }
         nav a {
             color: #ffffff;
@@ -38,10 +41,10 @@
             padding: 20px;
         }
         ul.portfolio-list li {
-            margin-bottom: 20px; /* Добавлено больше пространства под каждым элементом списка */
+            margin-bottom: 20px; 
         }
         .contact-form {
-            background-color: #333333;
+            background-color: rgba(51, 51, 51, 0.7); 
             padding: 20px;
             border-radius: 5px;
         }
@@ -63,12 +66,16 @@
         .contact-form button:hover {
             background-color: #797979;
         }
+        .success-message {
+            color: #00ff00;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Fuad Gurbanov</h1>
-        <p>Data Scientist and AI Engineer</p>
+        <p>Data Scientist/AI Engineer</p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -79,7 +86,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Email: fuad.152022@gmail.com(main)/fuadgurbanov.ai@gmail.com</p>
+            <p>Email: fuadgurbanov.ai@gmail.com</p>
             <p>Phone: +994513104244</p>
             <p>Location: Baku, Azerbaijan</p>
             <p><a href="https://linkedin.com/in/fuad-gurbanov" target="_blank">LinkedIn</a> | <a href="https://github.com/Fuad-grb" target="_blank">GitHub</a></p>
@@ -120,6 +127,4 @@
         </section>
     </div>
 </body>
-</html>
-
 </html>
