Update portfolio projects in index.html

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -86,7 +86,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Email: fuadgurbanov.ai@gmail.com</p>
+            <p>Email: fuad.152022@gmail.com</p>
             <p>Phone: +994513104244</p>
             <p>Location: Baku, Azerbaijan</p>
             <p><a href="https://linkedin.com/in/fuad-gurbanov" target="_blank">LinkedIn</a> | <a href="https://github.com/Fuad-grb" target="_blank">GitHub</a></p>
