Add blog page and update navigation

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -78,10 +78,8 @@
         <p>Data Scientist/AI Engineer</p>
     </header>
     <nav>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contact</a>
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'blog' %}">Blog</a>
     </nav>
     <div class="container">
         <section id="about">
