--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -1,15 +1,13 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>My Blog</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('{% static "C:\Users\hp\Downloads\startbootstrap-clean-blog-gh-pages\startbootstrap-clean-blog-gh-pages\assets\img\home-bg.jpg" %}'); 
+            background-image: url('C:\Users\hp\OneDrive\Рабочий стол\bio\mywebsite\static\home-bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -18,43 +16,56 @@
             padding: 0;
         }
         header {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 10px;
+            background-color: rgba(13, 13, 58, 0.7); 
+            padding: 20px;
             text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: rgba(13, 13, 58, 0.7); 
+        }
+        nav a {
+            color: #ffffff;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        nav a:hover {
+            background-color: #575757;
         }
         .container {
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7); /*  */
-            border-radius: 5px;
         }
-        .post {
-            background-color: rgba(255, 255, 255, 0.8);
-            color: #333;
-            border: 1px solid #ddd;
-            margin-bottom: 20px;
+        .blog-post {
+            background-color: rgba(51, 51, 51, 0.7); 
             padding: 20px;
+            margin-bottom: 20px;
             border-radius: 5px;
         }
-        .post h2 {
+        .blog-post h2 {
             margin-top: 0;
         }
     </style>
 </head>
-
 <body>
     <header>
         <h1>My Blog</h1>
     </header>
+    <nav>
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'blog' %}">Blog</a>
+        <!-- другие ссылки -->
+    </nav>
     <div class="container">
-        <section id="blog">
-            <div class="post">
-                <h2>Blog Post Title</h2>
-                <p>Blog post content...</p>
-            </div>
-            <!-- new posts here -->
-        </section>
+        <div class="blog-post">
+            <h2>Blog Post Title</h2>
+            <p>Blog post content...</p>
+        </div>
+        <!-- add blogs here -->
     </div>
 </body>
-
 </html>
