Update blog page with background image and placeholder for posts

--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url("{% static 'home-bg.jpg' %}");
+            background-image: url("https://img.freepik.com/free-photo/top-view-arrangement-natural-material-stationery_23-2148898233.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
