--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -59,8 +59,15 @@
     <nav>
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'blog' %}">Blog</a>
-        <!-- другие ссылки -->
+        {% if user.is_authenticated %}
+            <a href="{% url 'create_post' %}">Create Post</a>
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>
+        {% endif %}
     </nav>
+    
     <div class="container">
         <div class="blog-post">
             <h2>Blog Post Title</h2>
