--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -80,7 +80,15 @@
     <nav>
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'blog' %}">Blog</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'create_post' %}">Create Post</a>
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>
+        {% endif %}
     </nav>
+    
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
